@@ -1,202 +1,193 @@
 package com.sgi.fiis.grupos_investigacion.presentation.controller;
 
-import tools.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.sgi.fiis.grupos_investigacion.application.dto.*;
 import com.sgi.fiis.grupos_investigacion.application.usecase.*;
 import com.sgi.fiis.grupos_investigacion.domain.model.GrupoInvestigacion;
 import com.sgi.fiis.grupos_investigacion.domain.model.Membresia;
 import com.sgi.fiis.grupos_investigacion.presentation.mapper.GrupoInvestigacionMapper;
-import com.sgi.fiis.lineas_investigacion.application.dto.LineaInvestigacionResponseDto;
 import com.sgi.fiis.lineas_investigacion.application.usecase.ListarLineasPorGrupoUseCase;
 import com.sgi.fiis.lineas_investigacion.domain.model.LineaInvestigacion;
+import com.sgi.fiis.lineas_investigacion.application.dto.LineaInvestigacionResponseDto;
 import com.sgi.fiis.lineas_investigacion.presentation.mapper.LineaInvestigacionMapper;
-import com.sgi.fiis.shared.domain.exception.BusinessException;
-import com.sgi.fiis.shared.domain.exception.ResourceNotFoundException;
-import com.sgi.fiis.shared.infrastructure.exception.GlobalExceptionHandler;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
-import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
-import org.springframework.context.annotation.Import;
+import org.mockito.Mockito;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.time.LocalDateTime;
-import java.util.List;
+import java.util.Collections;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.BDDMockito.*;
+import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(GrupoInvestigacionController.class)
-@AutoConfigureMockMvc(addFilters = false)
-@Import(GlobalExceptionHandler.class)
 class GrupoInvestigacionControllerTest {
 
-    @Autowired
     private MockMvc mockMvc;
-
-    @Autowired
+    private CrearGrupoUseCase crearGrupoUseCase;
+    private ListarGruposUseCase listarGruposUseCase;
+    private ObtenerGrupoUseCase obtenerGrupoUseCase;
+    private AsignarCoordinadorUseCase asignarCoordinadorUseCase;
+    private AsignarMiembroUseCase asignarMiembroUseCase;
+    private RetirarMiembroUseCase retirarMiembroUseCase;
+    private ListarMiembrosUseCase listarMiembrosUseCase;
+    private ListarLineasPorGrupoUseCase listarLineasPorGrupoUseCase;
+    private GrupoInvestigacionMapper mapper;
+    private LineaInvestigacionMapper lineaMapper;
     private ObjectMapper objectMapper;
 
-    @MockitoBean private CrearGrupoUseCase crearGrupoUseCase;
-    @MockitoBean private ListarGruposUseCase listarGruposUseCase;
-    @MockitoBean private ObtenerGrupoUseCase obtenerGrupoUseCase;
-    @MockitoBean private AsignarCoordinadorUseCase asignarCoordinadorUseCase;
-    @MockitoBean private AsignarMiembroUseCase asignarMiembroUseCase;
-    @MockitoBean private RetirarMiembroUseCase retirarMiembroUseCase;
-    @MockitoBean private ListarMiembrosUseCase listarMiembrosUseCase;
-    @MockitoBean private ListarLineasPorGrupoUseCase listarLineasPorGrupoUseCase;
-    @MockitoBean private GrupoInvestigacionMapper mapper;
-    @MockitoBean private LineaInvestigacionMapper lineaMapper;
-    
-    // Mocks requeridos por la configuración de seguridad y JwtAuthenticationFilter
-    @MockitoBean private com.sgi.fiis.auth.domain.port.TokenProviderPort tokenProviderPort;
-    @MockitoBean private com.sgi.fiis.auth.infrastructure.security.CustomUserDetailsService customUserDetailsService;
+    @BeforeEach
+    void setup() {
+        crearGrupoUseCase = Mockito.mock(CrearGrupoUseCase.class);
+        listarGruposUseCase = Mockito.mock(ListarGruposUseCase.class);
+        obtenerGrupoUseCase = Mockito.mock(ObtenerGrupoUseCase.class);
+        asignarCoordinadorUseCase = Mockito.mock(AsignarCoordinadorUseCase.class);
+        asignarMiembroUseCase = Mockito.mock(AsignarMiembroUseCase.class);
+        retirarMiembroUseCase = Mockito.mock(RetirarMiembroUseCase.class);
+        listarMiembrosUseCase = Mockito.mock(ListarMiembrosUseCase.class);
+        listarLineasPorGrupoUseCase = Mockito.mock(ListarLineasPorGrupoUseCase.class);
+        mapper = Mockito.mock(GrupoInvestigacionMapper.class);
+        lineaMapper = Mockito.mock(LineaInvestigacionMapper.class);
+        GrupoInvestigacionController controller = new GrupoInvestigacionController(
+                crearGrupoUseCase, listarGruposUseCase, obtenerGrupoUseCase,
+                asignarCoordinadorUseCase, asignarMiembroUseCase, retirarMiembroUseCase,
+                listarMiembrosUseCase, listarLineasPorGrupoUseCase, mapper, lineaMapper);
+        mockMvc = MockMvcBuilders.standaloneSetup(controller).build();
+        objectMapper = new ObjectMapper();
+        objectMapper.findAndRegisterModules();
+    }
 
     @Test
-    void crear_deberiaRetornar201_cuandoDatosValidos() throws Exception {
-        GrupoInvestigacionRequestDto request = new GrupoInvestigacionRequestDto("GI-001", "Grupo de IA");
-        GrupoInvestigacion domain = GrupoInvestigacion.builder()
-                .id(1).codigoGrupo("GI-001").nombreGrupo("Grupo de IA").esActivo(true).build();
-        GrupoInvestigacionResponseDto response = GrupoInvestigacionResponseDto.builder()
-                .id(1).codigoGrupo("GI-001").nombreGrupo("Grupo de IA").esActivo(true).build();
+    void shouldCrearGrupo() throws Exception {
+        GrupoInvestigacionRequestDto dto = new GrupoInvestigacionRequestDto();
+        dto.setCodigoGrupo("GIN-001");
+        dto.setNombreGrupo("Grupo Test");
 
-        given(mapper.toDomain(any())).willReturn(domain);
-        given(crearGrupoUseCase.execute(any())).willReturn(domain);
-        given(mapper.toResponseDto(any())).willReturn(response);
+        GrupoInvestigacion domain = GrupoInvestigacion.builder().codigoGrupo("GIN-001").build();
+        GrupoInvestigacion saved = GrupoInvestigacion.builder().id(1).codigoGrupo("GIN-001").build();
+        GrupoInvestigacionResponseDto response = GrupoInvestigacionResponseDto.builder().id(1).codigoGrupo("GIN-001")
+                .build();
+
+        when(mapper.toDomain(any(GrupoInvestigacionRequestDto.class))).thenReturn(domain);
+        when(crearGrupoUseCase.execute(any(GrupoInvestigacion.class))).thenReturn(saved);
+        when(mapper.toResponseDto(any(GrupoInvestigacion.class))).thenReturn(response);
 
         mockMvc.perform(post("/api/v1/grupos-investigacion")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(dto)))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id").value(1))
-                .andExpect(jsonPath("$.codigoGrupo").value("GI-001"))
-                .andExpect(jsonPath("$.esActivo").value(true));
+                .andExpect(jsonPath("$.id").value(1));
     }
 
     @Test
-    void crear_deberiaRetornar400_cuandoCodigoVacio() throws Exception {
-        GrupoInvestigacionRequestDto request = new GrupoInvestigacionRequestDto("", "Grupo de IA");
+    void shouldListarGrupos() throws Exception {
+        GrupoInvestigacion grupo = GrupoInvestigacion.builder().id(1).build();
+        GrupoInvestigacionResponseDto response = GrupoInvestigacionResponseDto.builder().id(1).build();
 
-        mockMvc.perform(post("/api/v1/grupos-investigacion")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isBadRequest());
-    }
-
-    @Test
-    void listar_deberiaRetornar200_conListaDeGrupos() throws Exception {
-        List<GrupoInvestigacion> grupos = List.of(
-                GrupoInvestigacion.builder().id(1).codigoGrupo("GI-001").nombreGrupo("Grupo A").build()
-        );
-        GrupoInvestigacionResponseDto dto = GrupoInvestigacionResponseDto.builder()
-                .id(1).codigoGrupo("GI-001").nombreGrupo("Grupo A").build();
-
-        given(listarGruposUseCase.execute()).willReturn(grupos);
-        given(mapper.toResponseDto(any())).willReturn(dto);
+        when(listarGruposUseCase.execute()).thenReturn(Collections.singletonList(grupo));
+        when(mapper.toResponseDto(any(GrupoInvestigacion.class))).thenReturn(response);
 
         mockMvc.perform(get("/api/v1/grupos-investigacion"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[0].codigoGrupo").value("GI-001"));
+                .andExpect(jsonPath("$[0].id").value(1));
     }
 
     @Test
-    void obtener_deberiaRetornar404_cuandoGrupoNoExiste() throws Exception {
-        given(obtenerGrupoUseCase.execute(99))
-                .willThrow(new ResourceNotFoundException("GrupoInvestigacion", "id", 99));
+    void shouldObtenerGrupo() throws Exception {
+        GrupoInvestigacion grupo = GrupoInvestigacion.builder().id(1).build();
+        GrupoInvestigacionResponseDto response = GrupoInvestigacionResponseDto.builder().id(1).build();
 
-        mockMvc.perform(get("/api/v1/grupos-investigacion/99"))
-                .andExpect(status().isNotFound());
+        when(obtenerGrupoUseCase.execute(1)).thenReturn(grupo);
+        when(mapper.toResponseDto(any(GrupoInvestigacion.class))).thenReturn(response);
+
+        mockMvc.perform(get("/api/v1/grupos-investigacion/1"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(1));
     }
 
     @Test
-    void asignarCoordinador_deberiaRetornar200_cuandoDatosValidos() throws Exception {
-        AsignarCoordinadorRequestDto request = new AsignarCoordinadorRequestDto(3);
-        GrupoInvestigacion actualizado = GrupoInvestigacion.builder()
-                .id(1).idCoordinadorActual(3).esActivo(true).build();
-        GrupoInvestigacionResponseDto response = GrupoInvestigacionResponseDto.builder()
-                .id(1).idCoordinadorActual(3).esActivo(true).build();
+    void shouldAsignarCoordinador() throws Exception {
+        AsignarCoordinadorRequestDto dto = new AsignarCoordinadorRequestDto();
+        dto.setIdUsuario(5);
 
-        given(asignarCoordinadorUseCase.execute(1, 3)).willReturn(actualizado);
-        given(mapper.toResponseDto(any())).willReturn(response);
+        GrupoInvestigacion domain = GrupoInvestigacion.builder().id(1).idCoordinadorActual(5).build();
+        GrupoInvestigacionResponseDto response = GrupoInvestigacionResponseDto.builder().id(1).idCoordinadorActual(5)
+                .build();
+
+        when(asignarCoordinadorUseCase.execute(1, 5)).thenReturn(domain);
+        when(mapper.toResponseDto(any(GrupoInvestigacion.class))).thenReturn(response);
 
         mockMvc.perform(patch("/api/v1/grupos-investigacion/1/coordinador")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(dto)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.idCoordinadorActual").value(3));
+                .andExpect(jsonPath("$.id").value(1))
+                .andExpect(jsonPath("$.idCoordinadorActual").value(5));
     }
 
     @Test
-    void asignarMiembro_deberiaRetornar400_cuandoViolaRF21() throws Exception {
-        AsignarMiembroRequestDto request = new AsignarMiembroRequestDto(5);
+    void shouldAsignarMiembro() throws Exception {
+        AsignarMiembroRequestDto dto = new AsignarMiembroRequestDto();
+        dto.setIdUsuario(5);
 
-        given(asignarMiembroUseCase.execute(eq(1), eq(5)))
-                .willThrow(new BusinessException("El usuario con id 5 ya pertenece a un grupo de investigación activo (RF-21)"));
+        Membresia domain = Membresia.builder().id(1).idGrupo(2).idUsuario(5).build();
+        MembresiaResponseDto response = MembresiaResponseDto.builder().id(1).idGrupo(2).idUsuario(5).build();
 
-        mockMvc.perform(post("/api/v1/grupos-investigacion/1/miembros")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isBadRequest());
-    }
+        when(asignarMiembroUseCase.execute(2, 5)).thenReturn(domain);
+        when(mapper.toMembresiaResponseDto(any(Membresia.class))).thenReturn(response);
 
-    @Test
-    void asignarMiembro_deberiaRetornar201_cuandoDatosValidos() throws Exception {
-        AsignarMiembroRequestDto request = new AsignarMiembroRequestDto(2);
-        Membresia membresia = Membresia.builder()
-                .id(10).idGrupo(1).idUsuario(2).esActivo(true)
-                .fechaInicio(LocalDateTime.now()).build();
-        MembresiaResponseDto response = MembresiaResponseDto.builder()
-                .id(10).idGrupo(1).idUsuario(2).esActivo(true).build();
-
-        given(asignarMiembroUseCase.execute(1, 2)).willReturn(membresia);
-        given(mapper.toMembresiaResponseDto(any())).willReturn(response);
-
-        mockMvc.perform(post("/api/v1/grupos-investigacion/1/miembros")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+        mockMvc.perform(post("/api/v1/grupos-investigacion/2/miembros")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(dto)))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.idGrupo").value(1))
-                .andExpect(jsonPath("$.idUsuario").value(2));
+                .andExpect(jsonPath("$.id").value(1))
+                .andExpect(jsonPath("$.idUsuario").value(5));
     }
 
     @Test
-    void retirarMiembro_deberiaRetornar200_cuandoMiembroActivo() throws Exception {
-        Membresia retirada = Membresia.builder()
-                .id(10).idGrupo(1).idUsuario(5).esActivo(false)
-                .fechaFin(LocalDateTime.now()).build();
-        MembresiaResponseDto response = MembresiaResponseDto.builder()
-                .id(10).esActivo(false).build();
+    void shouldRetirarMiembro() throws Exception {
+        Membresia domain = Membresia.builder().id(1).idGrupo(2).idUsuario(5).esActivo(false).build();
+        MembresiaResponseDto response = MembresiaResponseDto.builder().id(1).idGrupo(2).idUsuario(5).esActivo(false)
+                .build();
 
-        given(retirarMiembroUseCase.execute(1, 5)).willReturn(retirada);
-        given(mapper.toMembresiaResponseDto(any())).willReturn(response);
+        when(retirarMiembroUseCase.execute(2, 5)).thenReturn(domain);
+        when(mapper.toMembresiaResponseDto(any(Membresia.class))).thenReturn(response);
 
-        mockMvc.perform(delete("/api/v1/grupos-investigacion/1/miembros/5"))
+        mockMvc.perform(delete("/api/v1/grupos-investigacion/2/miembros/5"))
                 .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(1))
                 .andExpect(jsonPath("$.esActivo").value(false));
     }
 
     @Test
-    void listarLineas_deberiaRetornar200_conLineasDelGrupo() throws Exception {
-        GrupoInvestigacion grupo = GrupoInvestigacion.builder().id(1).esActivo(true).build();
-        List<LineaInvestigacion> lineas = List.of(
-                LineaInvestigacion.builder().id(2).nombreLinea("Robótica").build()
-        );
-        LineaInvestigacionResponseDto lineaDto = LineaInvestigacionResponseDto.builder()
-                .id(2).nombreLinea("Robótica").esActiva(true).build();
+    void shouldListarMiembros() throws Exception {
+        Membresia domain = Membresia.builder().id(1).build();
+        MembresiaResponseDto response = MembresiaResponseDto.builder().id(1).build();
 
-        given(obtenerGrupoUseCase.execute(1)).willReturn(grupo);
-        given(listarLineasPorGrupoUseCase.execute(1)).willReturn(lineas);
-        given(lineaMapper.toResponseDto(any())).willReturn(lineaDto);
+        when(listarMiembrosUseCase.execute(2)).thenReturn(Collections.singletonList(domain));
+        when(mapper.toMembresiaResponseDto(any(Membresia.class))).thenReturn(response);
 
-        mockMvc.perform(get("/api/v1/grupos-investigacion/1/lineas"))
+        mockMvc.perform(get("/api/v1/grupos-investigacion/2/miembros"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(2))
-                .andExpect(jsonPath("$[0].nombreLinea").value("Robótica"));
+                .andExpect(jsonPath("$[0].id").value(1));
+    }
+
+    @Test
+    void shouldListarLineas() throws Exception {
+        GrupoInvestigacion grupo = GrupoInvestigacion.builder().id(2).build();
+        LineaInvestigacion line = LineaInvestigacion.builder().id(10).build();
+        LineaInvestigacionResponseDto response = LineaInvestigacionResponseDto.builder().id(10).build();
+
+        when(obtenerGrupoUseCase.execute(2)).thenReturn(grupo);
+        when(listarLineasPorGrupoUseCase.execute(2)).thenReturn(Collections.singletonList(line));
+        when(lineaMapper.toResponseDto(any(LineaInvestigacion.class))).thenReturn(response);
+
+        mockMvc.perform(get("/api/v1/grupos-investigacion/2/lineas"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].id").value(10));
     }
 }
